# opentribot

./: .gitignore  LICENSE  README.md  install_opentribot  wii_remote.yaml
away/maxondrivers/: CMakeLists.txt  eposserver.cpp  manifest.xml  testeposmotor.cpp
opentribot_decision/: CMakeLists.txt  mainpage.dox  manifest.xml
opentribot_decision/src/: .kdev_include_paths  configure.csh  decision.cc  decision.pro
opentribot_decision/src/.kdev4/: src.kdev4
opentribot_decision/src/Audio/: WavePlay.h
opentribot_decision/src/Behavior/: BDIBehavior.cc  BDIBehavior.h  Behavior.cc  Behavior.h  CycleCallBackRegistry.cc  CycleCallBackRegistry.h  RandomChoiceBehavior.cc  RandomChoiceBehavior.h  SPBehavior.cc  SPBehavior.h  Skill.cc  Skill.h  TimeoutBehavior.cc  TimeoutBehavior.h
opentribot_decision/src/Communication/: NonspecificTaggedUDPCommunication.h  TribotsUDPCommunication.h  UDPCommunicationStatistics.h  encoding.cc
opentribot_decision/src/Decision/: ControlLoopDecision.h  Decision.pro  main.cc
opentribot_decision/src/Fundamental/: BallLocationHysteresis.h  ConfigReader.cc  Frame2D.cc  Joystick.h  PIDController.h  POSIXThread.cc  SmoothingFilter.h  Vec.h  Vec3D.h  binary_encoding.h  geometry3D.cc  stringconvert.cc
opentribot_decision/src/Player/: AddGotoPosPlayer.h  AddJoystickPlayer.cc  AddJoystickPlayer.h  BehaviorPlayer.h  ChallengePlayer.h  ChallengePlayer07.cc  ChallengePlayer08.h  DemoGoalie.h  FieldPlayer.h  FieldPlayer07.cc  FieldPlayerStuttgart.cc  HeikoPlayer.cc  HeikoPlayer.h  HumanCoopPlayer.cc  HumanCoopPlayer.h  JoystickPlayerUDP.cc  MultiRolePlayer.h  NewKickerTestPlayer.h  PassPlayer.h  Player.h  PlayerDummy.h  PlayerTipkick.cc  PlayerType.h  SaschasPassPlayer.cc  SetupPlayer.cc  SimpleDefender.h  SingleRolePlayer.cc  TutorialPlayer.cc  TutorialPlayer.h  WhiteBoard.cc  WhiteBoard.h  ZickZackTestPlayer.cc
opentribot_decision/src/Simulator/: SimClient.cc  SimClient.h  SimulatedTribot.cc  SimulatedTribot.h  SimulatorVision.cc  SimulatorVision.h  SimulatorWorldModel.cc  SimulatorWorldModel.h
opentribot_decision/src/Structures/: BallLocation.h  BallLocationReadWriter.cc  DriveVector.h  DriveVectorReadWriter.h  GameState.h  GameStateReadWriter.cc  GameStateReadWriter.h  GyroData.h  Journal.h  MessageBoardReadWriter.h  RobotData.cc  RobotLocation.h  RobotProperties.h  TacticsBoardDescription.h  TeammateLocation.cc  TeammateLocation.h  TribotsException.cc  VisibleObject.h  VisibleObjectReadWriter.cc  default_exception_handler.cc
opentribot_decision/src/UserInterface/: UserInterface.cc  UserInterfaceType.h
opentribot_decision/src/WorldModel/: WorldModel.cc  WorldModel.h  WorldModel.h_____  WorldModelAbsolute.h  WorldModelRelative.h  WorldModelType.h
opentribot_decision/src/main/: robotcontrol_main.cc
opentribot_decision/src/processes/: Makefile  client.cpp  readme  visionserver.cc  visionserver.pro
opentribot_motion/: CMakeLists.txt  mainpage.dox  manifest.xml
opentribot_motion/launch/: motionserver.launch
opentribot_motion/src/: .kdev_include_paths  dummy_sender.cpp  epos2.cfg  epos8.cfg  kick.c  main.cpp  motionServer.cfg  motionServer.pro  motionserver.cpp  motionserver.h
opentribot_motion/src/bvCan/: bvbinaryio.h  bvcan.cpp  bvcan.h  bvcanbuseposprotocol1.cpp  bvcanbuseposprotocol1.h  bvcanopenmessage.h  bvcanopenmessagehandler.cpp  bvcanopenmessagehandler.h  bvcanopenmessageset.cpp  bvcanopenmessageset.h  bvcanopenobject.cpp  bvcanopenobject.h  bvdebug.h  bvfd.cpp  bvfd.h  bvglobal.cpp  bvlog.h  bvmessage.h  bvmessagebase.cpp  bvmessagebase.h  bvwaitbase.h
opentribot_motion/src/kicker/: Makefile  kick.c  kick.h  kicker.pro  stopwatch.h
opentribot_motion/src/udp_imu/: original_usb  udp_imu.cpp  udp_imu.pro
opentribot_motion/src/udp_remote/: udp_remote.cpp  udp_remote.pro
opentribot_motion/src/wii_remote/: Makefile  shelloop.sh  wii_remote  wii_remote.cc  wii_remote.pro
opentribot_simulator/: CMakeLists.txt  manifest.xml
opentribot_simulator/.kdev4/: opentribot_motion.kdev4
opentribot_simulator/launch/: simulator.launch
opentribot_simulator/ode/ode-0.5/: Makefile
opentribot_simulator/src/: .promake  odeserver.pro
opentribot_simulator/src/Communication/: MultiPacketUDPCommunication.cc  NonspecificTaggedUDPCommunication.cc  NonspecificTaggedUDPCommunication.h  SimulatorUDPCommunication.h  UDPSocket.h
opentribot_simulator/src/Fundamental/: Time.h
opentribot_simulator/src/Simulator/: Communication.cpp  Communication.h  World.cpp  World.h  dynamics.cpp  external.cpp  global.h  main.cpp
opentribot_vision/: CMakeLists.txt  mainpage.dox  manifest.xml  opentribot_vision.kdev4  ov534.c
opentribot_vision/.kdev4/: opentribot_vision.kdev4
opentribot_vision/configs/: coach.cfg.bak  distance_calibration.cfg  global_OdeSimPack.cfg  global_camera_test.cfg  global_dummy.cfg  global_file.cfg  global_real.cfg  global_real.cfg.bak  global_real_3d.cfg  global_simulator.cfg  image_processing.cfg  image_sources.cfg.bak  rcplayer.cfg  robotNewStd.cfg  robotcontrol.cfg  robotcontrol.cfg.bak  teamcontrol.cfg  test.cfg  vision.cfg  world_model.cfg.bak
opentribot_vision/configs/field_geometry/: field_geometry_302.cfg  field_geometry_401cross.cfg  field_geometry_bremenA.cfg  field_geometry_odesim.cfg  field_geometry_portable.cfg
opentribot_vision/src/: visionserver.cc  visionserver.pro
opentribot_vision/src/Audio/: WavePlay.cc
opentribot_vision/src/Calibration/: CameraOptics.cc  CameraOptics.h  GrayLevelImage.cc  GrayLevelImage.h  ImageArea.h  ImageCenterSurveillance.cc  ImageCoordinate.h  Pixelset.cc  Pixelset.h  edgeDetection.h
opentribot_vision/src/Fundamental/: Angle.cc  Angle.h  ConfigReader.cc  DynamicRingBuffer.h  Hysteresis.h  POSIXThread.h  PiecewiseLinearFunction.h  RolePreferences.cpp  Table.h  VSController.h  geometry.cc  geometry.h  stringconvert.h
opentribot_vision/src/ImageProcessing/: ImageProcessing.cc  (+9 more)
opentribot_worldmodel/: CMakeLists.txt  mainpage.dox  manifest.xml
opentribot_worldmodel/.kdev4/: opentribot_worldmodel.kdev4
opentribot_worldmodel/src/: .kdev_include_paths  worldmodel.cc  worldmodel.pro
(+1378 files in other folders)
